ExprParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ExprVisitor import ExprVisitor
else:
    from ExprVisitor import ExprVisitor



class ExprParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'='", u"'func'", u"'('", u"')'", u"'->'", 
                     u"','", u"'*'", u"'/'", u"'+'", u"'-'", u"'clear'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"MUL", 
                      u"DIV", u"ADD", u"SUB", u"CLEAR", u"ID", u"INT", u"END", 
                      u"WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_params = 3
    RULE_args = 4

    ruleNames =  [ "prog", "stat", "expr", "params", "args" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    MUL=7
    DIV=8
    ADD=9
    SUB=10
    CLEAR=11
    ID=12
    INT=13
    END=14
    WS=15

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.stat()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.T__1) | (1 << ExprParser.T__2) | (1 << ExprParser.CLEAR) | (1 << ExprParser.ID) | (1 << ExprParser.INT) | (1 << ExprParser.END))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class ClearContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLEAR(self):
            return self.getToken(ExprParser.CLEAR, 0)
        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitClear(self)
            else:
                return visitor.visitChildren(self)


    class DefineContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)
        def params(self):
            return self.getTypedRuleContext(ExprParser.ParamsContext,0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitDefine(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.StatContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = ExprParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 35
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = ExprParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.expr(0)
                self.state = 16
                self.match(ExprParser.END)
                pass

            elif la_ == 2:
                localctx = ExprParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.match(ExprParser.ID)
                self.state = 19
                self.match(ExprParser.T__0)
                self.state = 20
                self.expr(0)
                self.state = 21
                self.match(ExprParser.END)
                pass

            elif la_ == 3:
                localctx = ExprParser.ClearContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 23
                self.match(ExprParser.CLEAR)
                self.state = 24
                self.match(ExprParser.END)
                pass

            elif la_ == 4:
                localctx = ExprParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 25
                self.match(ExprParser.END)
                pass

            elif la_ == 5:
                localctx = ExprParser.DefineContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 26
                self.match(ExprParser.T__1)
                self.state = 27
                self.match(ExprParser.ID)
                self.state = 28
                self.match(ExprParser.T__2)
                self.state = 29
                self.params()
                self.state = 30
                self.match(ExprParser.T__3)
                self.state = 31
                self.match(ExprParser.T__4)
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(ExprParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)
        def args(self):
            return self.getTypedRuleContext(ExprParser.ArgsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ExprParser.CallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 38
                self.match(ExprParser.ID)
                self.state = 39
                self.match(ExprParser.T__2)
                self.state = 40
                self.args()
                self.state = 41
                self.match(ExprParser.T__3)
                pass

            elif la_ == 2:
                localctx = ExprParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 43
                self.match(ExprParser.INT)
                pass

            elif la_ == 3:
                localctx = ExprParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self.match(ExprParser.ID)
                pass

            elif la_ == 4:
                localctx = ExprParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 45
                self.match(ExprParser.T__2)
                self.state = 46
                self.expr(0)
                self.state = 47
                self.match(ExprParser.T__3)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 57
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.MulDivContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 51
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 52
                        _la = self._input.LA(1)
                        if not(_la==ExprParser.MUL or _la==ExprParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 53
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.AddSubContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 54
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 55
                        _la = self._input.LA(1)
                        if not(_la==ExprParser.ADD or _la==ExprParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 56
                        self.expr(6)
                        pass

             
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_params

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultparamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ParamsContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)
        def params(self):
            return self.getTypedRuleContext(ExprParser.ParamsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitMultparam(self)
            else:
                return visitor.visitChildren(self)


    class SingleparamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ParamsContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitSingleparam(self)
            else:
                return visitor.visitChildren(self)



    def params(self):

        localctx = ExprParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        try:
            self.state = 66
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = ExprParser.MultparamContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(ExprParser.ID)
                self.state = 63
                self.match(ExprParser.T__5)
                self.state = 64
                self.params()
                pass

            elif la_ == 2:
                localctx = ExprParser.SingleparamContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(ExprParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_args

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultargContext(ArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ArgsContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)

        def args(self):
            return self.getTypedRuleContext(ExprParser.ArgsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitMultarg(self)
            else:
                return visitor.visitChildren(self)


    class SingleargContext(ArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ArgsContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if isinstance( visitor, ExprVisitor ):
                return visitor.visitSinglearg(self)
            else:
                return visitor.visitChildren(self)



    def args(self):

        localctx = ExprParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_args)
        try:
            self.state = 73
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = ExprParser.MultargContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.expr(0)
                self.state = 69
                self.match(ExprParser.T__5)
                self.state = 70
                self.args()
                pass

            elif la_ == 2:
                localctx = ExprParser.SingleargContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         



